--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
@@ -44,7 +45,17 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
+  #Step 1 : Install icons and chane name app
+  flutter_launcher_icons: 
+  android: "launcher_icons"
+  ios : true
+  Remove_alpha.ios :true
+  image_path: "/.android/assets/icon/img.png"
+  min_sdk_android: 28
+  adaptative_icon_background :"#FFFFFF"
+  adaptative_icon_foreground :"/.android/assets/icon/img.png"
+  #dart run flutter_launcher_icons
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
