--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_launcher_icons: ^0.14.4
 
+  #Step 2 : Add Screen
+  flutter_spinkit: ^5.2.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -47,14 +50,14 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
   #Step 1 : Install icons and chane name app
-  flutter_launcher_icons: 
+flutter_launcher_icons: 
   android: "launcher_icons"
   ios : true
-  Remove_alpha.ios :true
-  image_path: "/.android/assets/icon/img.png"
+  Remove_alpha.ios: true
+  image_path: "./android/assets/icon/img.png"
   min_sdk_android: 28
-  adaptative_icon_background :"#FFFFFF"
-  adaptative_icon_foreground :"/.android/assets/icon/img.png"
+  adaptative_icon_background : "#FFFFFF"
+  adaptative_icon_foreground : "./android/assets/icon/img.png"
   #dart run flutter_launcher_icons
 
 # For information on the generic Dart part of this file, see the
@@ -72,7 +75,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    -./android/assets/images/
+    -./android/assets/images/app_screen.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
