--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,13 @@ dependencies:
   #Step 2 : Add Screen
   flutter_spinkit: ^5.2.1
 
+  #Step 3 : Check internet connection
+  connectivity_plus: ^3.0.6
+  
+  #Step 4 : Show toast message
+  fluttertoast: ^8.2.12
+  firebase_core: ^3.15.1
+  cloud_firestore: ^5.6.11
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -76,8 +83,8 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    -./android/assets/images/
-    -./android/assets/images/app_screen.png
+    - ./android/assets/images/
+    - ./android/assets/images/app_screen.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
